[project]
name = "jobagent"
version = "0.1.0"
description = "MCP server for managing a personal job-application workflow."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.12",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
addopts = "--cov --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
source = ["db", "applications", "server"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["db.py", "applications.py", "server.py"]

[tool.hatch.build.targets.sdist]
include = [
    "db.py",
    "applications.py",
    "server.py",
    "pyproject.toml",
    "README.md",
    "tests/",
]
